# azadmin

./: Cargo.toml  config-fuzhou.json  config-local.json  config-t.json  dep-ty.sh  dep.sh
src/: main.rs  model.rs  user_data.rs
src/ctrl/: game_controller.rs  game_repository.rs  game_service.rs  mod.rs  promotion_controller.rs  promotion_service.rs
src/lib/: mod.rs  req.rs  response.rs  server_api.rs  umeng_api.rs
