[package]
name = "azadmin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.0"
actix-files = "0.6.0"
actix-rt = "2.8.0"
actix-multipart = "0.6.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql" ] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
ssh-rs = "0.3.1"
chrono = "0.4.2"
jsonwebtoken = "8.2.0"
base64 = "0.21.0"
async-recursion = "1.0.4"